--- a/Launchupdate.html
+++ b/Launchupdate.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>Logiblock IDE</title>
+	<title>Logiblock IDE Launcher</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta name="description" content="Logiblock IDE Launcher"/>
 	<meta name="author" content="Outbreak, Inc."/>
@@ -84,7 +84,6 @@
 	</script>
 
 	<script src="static/jquery-1.7.2/jquery-1.7.2.min.js" type="application/javascript" charset="utf-8"></script>
-	<script src="static/underscore-1.4.4/underscore-1.4.4.min.js" type="application/javascript" charset="utf-8"></script>
 	<script src="static/bootstrap-2.3.1/bootstrap-2.3.1.min.js" type="application/javascript" charset="utf-8"></script>
 	
 	<script src="Launchupdate.js" type="application/javascript" charset="utf-8"></script>
